Added account data

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -683,6 +683,9 @@
 								<div class="mb-3 text-center">
 									<img id="receiveDGB1QR" class="img-fluid img-thumbnail">
 								</div>
+								<div class="mb-3 text-center" id="receiveDGB1Path">
+
+								</div>
 								<div class="mb-3">
 									<label>Address:</label>
 									<div class="input-group">
