--- a/src/app/index.html
+++ b/src/app/index.html
@@ -609,13 +609,16 @@
 								</div>
 							</div>
 							<div class="m-4" id="addAccount3">
-								<div class="mb-3" id="addAccount3Found"></div>
+								
+							</div>
+							<div class="m-4" id="addAccount4">
+								<div class="mb-3" id="addAccount4Found"></div>
 								<div class="d-flex justify-content-center mb-3">
-									<div class="spinner-border mx-auto" id="addAccount3Spinner">
+									<div class="spinner-border mx-auto" id="addAccount4Spinner">
 									</div>
 								</div>
 								<div class="text-center">
-									<button class="btn btn-danger btn-sm" onclick="addAccount3_StopLooking()">
+									<button class="btn btn-danger btn-sm" onclick="addAccount4_StopLooking()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-square" />
 										</svg> Stop Looking
@@ -627,9 +630,9 @@
 									</button>
 								</div>
 							</div>
-							<div class="m-4" id="addAccount4">
+							<div class="m-4" id="addAccount5">
 								<div class="mb-3 text-center">
-									<span id="addAccount4Message"></span>
+									<span id="addAccount5Message"></span>
 								</div>
 								<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
 									<svg class="bi" width="18" height="18">
