--- a/src/app/index.html
+++ b/src/app/index.html
@@ -579,8 +579,8 @@
 											<label class="form-check-label" for="addAccount2TypeLegacy">Legacy</label>
 										</div>
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeCompatibility" value="compatibility">
-											<label class="form-check-label" for="addAccount2TypeCompatibility">Compatibility</label>
+											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeScript" value="script">
+											<label class="form-check-label" for="addAccount2TypeScript">Script</label>
 										</div>
 										<div class="form-check form-check-inline">
 											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeSegwit" value="segwit">
@@ -609,9 +609,34 @@
 								</div>
 							</div>
 							<div class="m-4" id="addAccount3">
-								
+								<div class="mb-3">
+									Select addresses:
+								</div>
+								<div class="mb-3 list" id="addAccount3Found" style="max-height: 50vh;"></div>
+								<div class="d-flex justify-content-center mb-3">
+									<div class="spinner-border mx-auto" id="addAccount3Spinner">
+									</div>
+								</div>
+								<div class="mb-3 text-center">
+									<span id="addAccount3Error"></span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="addAccount3_Create()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Create
+									</button>
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
 							</div>
 							<div class="m-4" id="addAccount4">
+								<div class="mb-3">
+									Select account:
+								</div>
 								<div class="mb-3" id="addAccount4Found"></div>
 								<div class="d-flex justify-content-center mb-3">
 									<div class="spinner-border mx-auto" id="addAccount4Spinner">
