Updated key selector

--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -38,6 +38,9 @@ body {
 .option:hover {
     background-color: var(--secondary);
 }
+.option.active {
+    background-color: var(--tertiary);
+}
 .btn-dgb {
     color: var(--clear);
 }
