--- a/src/app/index.html
+++ b/src/app/index.html
@@ -119,8 +119,9 @@
 
 			<!-- Forms -->
 			<div class="m-3" id="frmKeys" hidden>
+				<input type="hidden" id="keyID">
 				<h1 class="p-4 text-center">
-					DigiByte Keys
+					DigiByte Wallets
 				</h1>
 				<div class="row px-5 py-4">
 					<div class="col-4">
@@ -133,7 +134,7 @@
 							<use xlink:href="vendor/bootstrap-icons.svg#key" />
 						</svg> Type
 					</div>
-					<div class="col-4">
+					<div class="col-3">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#info-circle" />
 						</svg> Information
@@ -539,14 +540,31 @@
 							</div>
 							<div class="m-4" id="addAccount1">
 								<div class="mb-3">
-									<label>Source Key's:</label>
-									<select class="form-select" id="addAccount1Keys">
-										<option value="null" selected disabled>Select keys</option>
-									</select>
-								</div>
-								<div class="mb-3">
 									<label>Name:</label>
 									<input type="text" class="form-control" id="addAccount1Name" placeholder="Account's name">
+								</div>
+								<div class="mb-3">
+									<label>Account's Type:</label>
+									<select class="form-select" id="addAccount1Type" onchange="addAccount1TypeAddress.hidden = addAccount1Type.value != 'derived'">
+										<option value="null" selected disabled>Select account</option>
+									</select>
+								</div>
+								<div class="mb-3" id="addAccount1TypeAddress" hidden>
+									<label>Address Type:</label>
+									<div class="text-center">
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount1TypeAddress" id="addAccount1TypeLegacy" value="legacy">
+											<label class="form-check-label" for="addAccount1TypeLegacy">Legacy</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount1TypeAddress" id="addAccount1TypeScript" value="script">
+											<label class="form-check-label" for="addAccount1TypeScript">Script</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount1TypeAddress" id="addAccount1TypeSegwit" value="segwit">
+											<label class="form-check-label" for="addAccount1TypeSegwit">Segwit</label>
+										</div>
+									</div>
 								</div>
 								<div class="mb-3 text-center">
 									<span id="addAccount1Error"></span>
@@ -565,29 +583,6 @@
 								</div>
 							</div>
 							<div class="m-4" id="addAccount2">
-								<div class="mb-3">
-									<label>Account's Type:</label>
-									<select class="form-select" id="addAccount2Type" onchange="addAccount2TypeAddress.hidden = addAccount2Type.value != 'derived'">
-										<option value="null" selected disabled>Select account</option>
-									</select>
-								</div>
-								<div class="mb-3" id="addAccount2TypeAddress" hidden>
-									<label>Address Type:</label>
-									<div class="text-center">
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeLegacy" value="legacy">
-											<label class="form-check-label" for="addAccount2TypeLegacy">Legacy</label>
-										</div>
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeScript" value="script">
-											<label class="form-check-label" for="addAccount2TypeScript">Script</label>
-										</div>
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeSegwit" value="segwit">
-											<label class="form-check-label" for="addAccount2TypeSegwit">Segwit</label>
-										</div>
-									</div>
-								</div>
 								<div class="mb-3">
 									<label>Key's Password:</label>
 									<input type="password" class="form-control" id="addAccount2Password">
