--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,8 +10,11 @@
 	<title>DigiByte Desktop</title>
 </head>
 
-<body class="container-fluid">
-	<div class="row justify-content-center">
+
+
+
+<body class="container-fluid h-100">
+	<div class="row justify-content-center h-100">
 		<div class="col-xl-10 h-100">
 			<!-- Top bar -->
 			<div class="row m-3">
@@ -60,7 +63,79 @@
 			</div>
 
 			<!-- Forms -->
-			<div class="m-3" id="frmKeys" hidden>
+			<div class="m-3 d-flex align-items-center h-75" id="frmStart">
+				<div class="row text-justify justify-content-center align-items-center">
+					<div class="col-6 text-center">
+						<div class="mb-3">
+							<img src="img/logo.png" class="img-fluid" style="max-width: 75%;">
+						</div>
+						<div class="mb-3">
+							<button class="btn btn-primary btn-sm" onclick="frmKeys_Load()">
+								<svg class="bi" width="18" height="18">
+									<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
+								</svg>
+								Open wallet
+							</button>
+						</div>
+						<div class="mb-3">
+							<a href="https://digibytedesktop.org/" class="btn btn-dgb btn-sm">
+								<svg class="bi bi-btn" width="18" height="18">
+									<use xlink:href="vendor/bootstrap-icons.svg#globe" />
+								</svg>
+							</a>
+							<a href="https://t.me/RenzoDD" class="btn btn-dgb btn-sm">
+								<svg class="bi bi-btn" width="18" height="18">
+									<use xlink:href="vendor/bootstrap-icons.svg#send" />
+								</svg>
+							</a>
+							<a href="https://x.com/RenzoDGB" class="btn btn-dgb btn-sm">
+								<svg class="bi bi-btn" width="18" height="18">
+									<use xlink:href="vendor/bootstrap-icons.svg#twitter-x" />
+								</svg>
+							</a>
+						</div>
+					</div>
+					<div class="col-6">
+						<h3>
+							<svg class="bi bi-btn" width="32" height="32">
+								<use xlink:href="vendor/bootstrap-icons.svg#digibyte" />
+							</svg>
+							What is DigiByte?
+						</h3>
+						<p>
+							DigiByte is a decentralized blockchain platform designed to provide a secure, fast, and scalable environment for various use cases. Launched on January 10, 2014, DigiByte has gained recognition for its commitment to decentralization and security.
+						</p>
+						<h3>
+							<svg class="bi bi-btn" width="32" height="32">
+								<use xlink:href="vendor/bootstrap-icons.svg#digiasset" />
+							</svg>
+							What are DigiAssets?
+						</h3>
+						<p>
+							DigiAssets is a secure, scalable layer on top of the DigiByte blockchain that allows for the decentralized issuance of digital assets, tokens, smart contracts, digital identity and more.
+						</p>
+						<h3>
+							<svg class="bi bi-btn" width="32" height="32">
+								<use xlink:href="vendor/bootstrap-icons.svg#digiid" />
+							</svg>
+							What is Digi-ID?
+						</h3>
+						<p>
+							Digi-ID is a security protocol built on DigiByte blockchain technology that empowers users to effortlessly sign-in to websites, applications, and even into the internet of things.
+						</p>
+						<h3>
+							<svg class="bi bi-btn" width="32" height="32">
+								<use xlink:href="vendor/bootstrap-icons.svg#display" />
+							</svg>
+							What is DigiByte Desktop?
+						</h3>
+						<p>
+							DigiByte Desktop is a light wallet for desktop operating systems. A multi purpose wallet capable of managing your DigiByte accounts.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="d-none m-3" id="frmKeys">
 				<input type="hidden" id="keyID">
 				<h1 class="p-4">
 					<svg class="bi" width="40" height="40">
@@ -74,12 +149,12 @@
 							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 						</svg> Name
 					</div>
-					<div class="col-4">
+					<div class="col-4 text-center">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#key" />
 						</svg> Type
 					</div>
-					<div class="col-4">
+					<div class="col-4 text-center">
 						<svg class="bi" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#info-circle" />
 						</svg> Information
@@ -106,7 +181,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="m-3" id="frmAccounts" hidden>
+			<div class="d-none m-3" id="frmAccounts">
 				<h1 class="p-4">
 					<svg class="bi" width="40" height="40">
 						<use xlink:href="vendor/bootstrap-icons.svg#collection" />
@@ -156,7 +231,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="m-3" id="frmAccount" hidden>
+			<div class="d-none m-3" id="frmAccount">
 				<input type="hidden" id="accountID">
 				<h1 class="pt-4 pb-2" id="accountName">
 					Renzo's DGB Personal Account
