--- a/src/app/index.html
+++ b/src/app/index.html
@@ -39,7 +39,7 @@
 					</label>
 				</div>
 				<div class="col text-end">
-					<button id="topSync" class="btn btn-dgb btn-lg" onclick="Sync()" hidden>
+					<button id="topSync" class="btn btn-dgb btn-lg" onclick="Sync()">
 						<svg class="bi bi-btn" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
 						</svg>
