--- a/src/app/index.html
+++ b/src/app/index.html
@@ -278,9 +278,7 @@
 								<label>Name:</label>
 								<input type="text" class="form-control" id="generateKeys1Name" placeholder="Key's name">
 							</div>
-							<div class="mb-3 text-center">
-								<span id="generateKeys1Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="generateKeys1Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="generateKeys1_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -303,9 +301,7 @@
 								<label>Confirm password:</label>
 								<input type="password" class="form-control" id="generateKeys2Password2" placeholder="Repeat the password">
 							</div>
-							<div class="mb-3 text-center">
-								<span id="generateKeys2Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="generateKeys2Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="generateKeys2_Generate()">
 									<svg class="bi" width="18" height="18">
@@ -350,13 +346,11 @@
 									<option value="file">Key File (.dgb)</option>
 								</select>
 							</div>
-							<div class="mb-3" id="importName">
+							<div class="mb-3" id="importName" hidden>
 								<label>Name:</label>
 								<input type="text" class="form-control" id="importKeys1Name" placeholder="Key's name">
 							</div>
-							<div class="mb-3 text-center">
-								<span id="importKeys1Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="importKeys1Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="importKeys1_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -433,9 +427,7 @@
 								<label for="passphrase">BIP39 Passphrase</label>
 								<input type="text" class="form-control form-control-sm" id="importKeys2MnemonicBIP39Passphrase" placeholder="(optional)" hidden>
 							</div>
-							<div class="mb-3 text-center">
-								<span id="importKeys2MnemonicError"></span>
-							</div>
+							<div class="mb-3 text-center" id="importKeys2MnemonicMessage"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="importKeys2Mnemonic_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -463,9 +455,7 @@
 							</div>
 							<ol class="mb-3 text-break font-monospace small" id="importKeys2KeysList">
 							</ol>
-							<div class="mb-3 text-center">
-								<span id="importKeys2KeysError"></span>
-							</div>
+							<div class="mb-3 text-center" id="importKeys2KeysMessage"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="importKeys2Keys_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -489,9 +479,7 @@
 								<input type="password" class="form-control" id="importKeys3Password2" placeholder="Repeat the password">
 							</div>
 
-							<div class="mb-3 text-center">
-								<span id="importKeys3Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="importKeys3Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="importKeys3_Save()">
 									<svg class="bi" width="18" height="18">
@@ -506,7 +494,7 @@
 							</div>
 						</div>
 						<div class="m-4" id="importKeys4">
-							<div id="importKeys4Message"></div>
+							<div class="mb-3 text-center" id="importKeys4Message"></div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="importKeys_Close()">
 									<svg class="bi" width="18" height="18">
@@ -619,9 +607,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="mb-3 text-center">
-								<span id="addAccount1Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="addAccount1Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="addAccount1_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -640,9 +626,7 @@
 								<label>Key's Password:</label>
 								<input type="password" class="form-control" id="addAccount2Password">
 							</div>
-							<div class="mb-3 text-center">
-								<span id="addAccount2Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="addAccount2Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="addAccount2_Continue()">
 									<svg class="bi" width="18" height="18">
@@ -665,9 +649,7 @@
 								<div class="spinner-border mx-auto" id="addAccount3Spinner">
 								</div>
 							</div>
-							<div class="mb-3 text-center">
-								<span id="addAccount3Error"></span>
-							</div>
+							<div class="mb-3 text-center" id="addAccount3Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="addAccount3_Create()">
 									<svg class="bi" width="18" height="18">
@@ -704,14 +686,14 @@
 							</div>
 						</div>
 						<div class="m-4" id="addAccount5">
+							<div class="mb-3 text-center" id="addAccount5Message"></div>
 							<div class="mb-3 text-center">
-								<span id="addAccount5Message"></span>
+								<button class="btn btn-secondary btn-sm" onclick="addAccount_Close()">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+									</svg> Close
+								</button>
 							</div>
-							<button class="btn btn-secondary btn-sm" onclick="addAccount_Close()">
-								<svg class="bi" width="18" height="18">
-									<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
-								</svg> Close
-							</button>
 						</div>
 					</div>
 				</div>
@@ -893,9 +875,7 @@
 
 							<hr class="mt-1 mb-3">
 
-							<div class="mb-3" id="sendDGB2Message" style="color:red">
-
-							</div>
+							<div class="mb-3 text-center" id="sendDGB2Message"></div>
 
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="sendDGB2_Continue()" id="sendDGB2Continue">
@@ -915,9 +895,7 @@
 								<label for="sendDGB3Password" class="form-label">Keys password:</label>
 								<input class="form-control" type="password" id="sendDGB3Password" placeholder="">
 							</div>
-							<div class="mb-3" id="sendDGB3Message">
-
-							</div>
+							<div class="mb-3 text-center" id="sendDGB3Message"></div>
 							<div class="text-center">
 								<button class="btn btn-success btn-sm" onclick="sendDGB3_Sign()" id="sendDGB3Sign">
 									<svg class="bi" width="18" height="18">
@@ -935,9 +913,7 @@
 							<div class="text-center mb-3" id="sendDGB4Spinner">
 								<div class="spinner-border text-primary"> </div>
 							</div>
-							<div class="mb-3 text-center text-break" id="sendDGB4Message">
-
-							</div>
+							<div class="mb-3 text-center text-break" id="sendDGB4Message"></div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="sendDGB_Close()">
 									<svg class="bi" width="18" height="18">
@@ -949,7 +925,47 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="modal fade" id="lookupMovement" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+					<div class="modal-content">
+						<div class="m-4" id="lookupMovement1">
+							<div class="mb-3">
+								<h3 class="text-center mb-3" id="lookupMovement1Action"></h3>
+								<div class="text-center mb-3" id="lookupMovement1Icon"></div>
+								<h4 class="text-center mb-3" id="lookupMovement1Amount"></h4>
+								<div class="mb-3">
+									<label>Time:</label>
+									<div id="lookupMovement1Time"></div>
+								</div>
+								<div class="mb-3">
+									<label>Transaction ID:</label>
+									<div class="text-break" id="lookupMovement1TXID"></div>
+								</div>
+								<div class="mb-3">
+									<label>From:</label>
+									<div id="lookupMovement1From"></div>
+								</div>
+								<div class="mb-3">
+									<label>To:</label>
+									<div id="lookupMovement1To"></div>
+								</div>
+							</div>							
+							<div class="text-center">
+								<a class="btn btn-primary btn-sm" id="lookupMovement1Explorer" href="">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#search" />
+									</svg> Open in explorer
+								</a>
+								<button class="btn btn-secondary btn-sm" onclick="lookupMovement_Close()">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+									</svg> Close
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
