--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,33 +10,19 @@
 	<title>DigiByte Desktop</title>
 </head>
 
-
-
-
 <body class="container-fluid h-100">
 	<div class="row justify-content-center h-100">
 		<div class="col-xl-10 h-100">
 			<!-- Top bar -->
 			<div class="row m-3">
-				<div class="col" id="exchange">
-					<label>
-						<svg class="bi bi-btn" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#cash-coin" />
-						</svg>
-						--.--
-					</label>
-					&nbsp;
-					&nbsp;
-					<label>
-						<svg class="bi bi-btn" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#radar" />
-						</svg>
-						--.--
-					</label>
-					&nbsp;
-					&nbsp;
-					<label id="topKeyName">
-					</label>
+				<div class="col-2 d-flex align-items-center">
+					<label id="topPrice"></label>
+				</div>
+				<div class="col-2 d-flex align-items-center">
+					<label id="topRate"></label>
+				</div>
+				<div class="col d-flex align-items-center">
+					<label id="topKeyName"></label>
 				</div>
 				<div class="col text-end">
 					<button id="topSync" class="btn btn-dgb btn-lg" onclick="Sync()">
@@ -49,7 +35,7 @@
 							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 						</svg>
 					</button>
-					<button id="topReturnToAccounts" class="btn btn-dgb btn-lg" onclick="topReturnToAccounts_Click()" hidden>
+					<button id="topReturnToAccounts" class="btn btn-dgb btn-lg" onclick="frmAccounts_Load()" hidden>
 						<svg class="bi bi-btn" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#arrow-return-left" />
 						</svg>
@@ -78,7 +64,7 @@
 									<use xlink:href="vendor/bootstrap-icons.svg#globe" />
 								</svg>
 							</a>
-							<a href="https://t.me/RenzoDD" class="btn btn-dgb btn-sm">
+							<a href="https://t.me/RenzoDGB" class="btn btn-dgb btn-sm">
 								<svg class="bi bi-btn" width="18" height="18">
 									<use xlink:href="vendor/bootstrap-icons.svg#send" />
 								</svg>
@@ -131,7 +117,6 @@
 				</div>
 			</div>
 			<div class="d-none m-3" id="frmKeys">
-				<input type="hidden" id="keyID">
 				<h1 class="p-4">
 					<svg class="bi" width="40" height="40">
 						<use xlink:href="vendor/bootstrap-icons.svg#digibyte" />
@@ -227,7 +212,6 @@
 				</div>
 			</div>
 			<div class="d-none m-3" id="frmAccount">
-				<input type="hidden" id="accountID">
 				<h1 class="pt-4 pb-2" id="accountName">
 					Renzo's DGB Personal Account
 				</h1>
@@ -949,7 +933,7 @@
 									<label>To:</label>
 									<div id="lookupMovement1To"></div>
 								</div>
-							</div>							
+							</div>
 							<div class="text-center">
 								<a class="btn btn-primary btn-sm" id="lookupMovement1Explorer" href="">
 									<svg class="bi" width="18" height="18">
