Added mempool update on broadcast

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -910,7 +910,7 @@
 							<div class="text-center mb-3" id="sendDGB4Spinner">
 								<div class="spinner-border text-primary"> </div>
 							</div>
-							<div class="mb-3 text-center text-break" id="sendDGB4Message"></div>
+							<div class="mb-3 text-break" id="sendDGB4Message"></div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="sendDGB_Close()">
 									<svg class="bi" width="18" height="18">
