--- a/src/app/index.html
+++ b/src/app/index.html
@@ -22,7 +22,7 @@
 					<label id="topRate"></label>
 				</div>
 				<div class="col d-flex align-items-center">
-					<label id="topKeyName"></label>
+
 				</div>
 				<div class="col text-end">
 					<button id="topSync" class="btn btn-dgb btn-lg" onclick="Sync()">
@@ -30,9 +30,14 @@
 							<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
 						</svg>
 					</button>
+					<button id="topSettings" class="btn btn-dgb btn-lg" onclick="frmKeys_Manage()">
+						<svg class="bi bi-btn" width="18" height="18">
+							<use xlink:href="vendor/bootstrap-icons.svg#sliders" />
+						</svg>
+					</button>
 					<button id="topKeys" class="btn btn-dgb btn-lg" onclick="frmKeys_Load()">
 						<svg class="bi bi-btn" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
+		 					<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 						</svg>
 					</button>
 					<button id="topReturnToAccounts" class="btn btn-dgb btn-lg" onclick="frmAccounts_Load()" hidden>
@@ -164,14 +169,14 @@
 			<div class="d-none m-3" id="frmAccounts">
 				<h1 class="p-4">
 					<svg class="bi" width="40" height="40">
-						<use xlink:href="vendor/bootstrap-icons.svg#collection" />
+						<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 					</svg>
-					DigiByte Accounts
+					<span id="accountsName">e</span>
 				</h1>
 				<div class="row px-5 py-4">
 					<div class="col-3">
 						<svg class="bi" width="18" height="18">
-							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
+							<use xlink:href="vendor/bootstrap-icons.svg#collection" />
 						</svg> Name
 					</div>
 					<div class="col-3">
@@ -193,26 +198,18 @@
 				<div class="list px-3" style="max-height: 45vh;" id="accountsList">
 
 				</div>
-				<hr>
 				<div class="row">
-					<div class="col-9">
+					<div class="col">
 						<div class="option text-center p-4 me-1" onclick="frmAccounts_Add()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
 							</svg> Add Account
 						</div>
 					</div>
-					<div class="col-3">
-						<div class="option text-center p-4 me-1" onclick="frmKeys_Manage()">
-							<svg class="bi" width="18" height="18">
-								<use xlink:href="vendor/bootstrap-icons.svg#wrench-adjustable-circle" />
-							</svg> Manage Key
-						</div>
-					</div>
 				</div>
 			</div>
 			<div class="d-none m-3" id="frmAccount">
-				<h1 class="pt-4 pb-2" id="accountName">
+				<h1 class="p-4 pb-2" id="accountName">
 					Renzo's DGB Personal Account
 				</h1>
 				<div class="row p-4">
@@ -490,29 +487,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="modal fade" id="manageKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+			<div class="modal fade" id="manageKey" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 					<div class="modal-content">
 						<div class="mt-4">
 							<h5 class="text-center">
-								Manage Keys
+								Manage Wallet
 							</h5>
 						</div>
-						<div class="m-4" id="manageKeys1">
+						<div class="m-4" id="manageKey1">
 							<div class="mb-3">
-								<div class="input-group mb-3">
-									<span class="input-group-text">Key:</span>
-									<input type="hidden" id="manageKeys1ID">
-									<input type="text" class="form-control" id="manageKeys1Name" readonly>
-								</div>
+								<label for="manageKey1Name">Name:</label>
+								<input type="text" class="form-control" id="manageKey1Name" readonly>
 							</div>
 							<div class="text-center mb-3">
-								<button type="button" class="btn btn-primary btn-sm" onclick="manageKeys1_Export()">
+								<button type="button" class="btn btn-primary btn-sm" onclick="manageKey1_Export()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
 									</svg> Export
 								</button>
-								<button type="button" class="btn btn-danger btn-sm" onclick="manageKeys1_Delete()">
+								<button type="button" class="btn btn-danger btn-sm" onclick="manageKey1_Delete()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#trash" />
 									</svg> Delete
@@ -524,13 +518,13 @@
 								</button>
 							</div>
 						</div>
-						<div class="m-4" id="manageKeys2">
+						<div class="m-4" id="manageKey2">
 							<div class="text-center mb-3">
 								Are you sure you want to delete this key file?<br>
 								(This can't be undone)
 							</div>
 							<div class="text-center mb-3">
-								<button type="button" class="btn btn-danger btn-sm" onclick="manageKeys2_Delete()">
+								<button type="button" class="btn btn-danger btn-sm" onclick="manageKey2_Delete()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#trash" />
 									</svg> Delete
@@ -542,8 +536,8 @@
 								</button>
 							</div>
 						</div>
-						<div class="m-4" id="manageKeys3">
-							<div class="text-center mb-3" id="manageKeys3Status"></div>
+						<div class="m-4" id="manageKey3">
+							<div class="text-center mb-3" id="manageKey3Status"></div>
 							<div class="text-center mb-3">
 								<button class="btn btn-secondary btn-sm" onclick="manageKey_Close()">
 									<svg class="bi" width="18" height="18">
@@ -555,6 +549,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="modal fade" id="addAccount" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 					<div class="modal-content">
@@ -682,6 +677,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="modal fade" id="receiveDGB" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 					<div class="modal-content">
@@ -767,7 +763,7 @@
 							</div>
 
 							<hr class="mt-1 mb-3">
-							
+
 							<div class="mb-3">
 								<label for="sendDGB2CoinControl">Coin control:</label>
 								<select class="form-select" id="sendDGB2CoinControl">
@@ -795,7 +791,7 @@
 									</div>
 								</div>
 							</div>
-							
+
 
 							<hr class="mt-1 mb-3">
 
@@ -962,7 +958,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>		
 		</div>
 	</div>
 
